--- a/.github/workflows/3d-contrib.yml
+++ b/.github/workflows/3d-contrib.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: yoshi389111/github-profile-3d-contrib@v0.7.0
+      - uses: yoshi389111/github-profile-3d-contrib@latest
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           username: ${{ github.repository_owner }}
