--- a/.github/workflows/3d-contrib.yml
+++ b/.github/workflows/3d-contrib.yml
@@ -20,8 +20,10 @@ jobs:
         uses: actions/checkout@v4 # Actualizado a la versión v4
 
       - name: Generar perfil 3D de contribuciones
-        # Se recomienda usar una versión específica (ej. v0.7.1) en lugar de @latest para mayor estabilidad.
-        uses: yoshi389111/github-profile-3d-contrib@v0.7.1
+        # Intentando con @master como paso de diagnóstico debido al error "Missing download info" con v0.7.1.
+        # Si esto funciona, considera que @master puede ser inestable.
+        # La versión estable recomendada sigue siendo v0.7.1 si se puede resolver el problema de descarga.
+        uses: yoshi389111/github-profile-3d-contrib@master
         with:
           # Usar el GITHUB_TOKEN estándar que provee GitHub Actions.
           # Este token obtiene sus permisos del bloque 'permissions' definido a nivel del job.
@@ -34,8 +36,8 @@ jobs:
 
       - name: Commit y push de los cambios
         run: |
-          git config user.name "diegote22" 
-          git config user.email "diegote_21_82@hotmail.com" 
+          git config user.name "diegote22" # Tu nombre de usuario para el commit
+          git config user.email "diegote_21_82@hotmail.com" # Tu email para el commit
           # El siguiente comando añade todos los archivos modificados y nuevos.
           # Considera ser más específico si la acción solo genera ciertos archivos (ej. git add profile-3d-contrib.svg)
           git add -A .
